<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignUpActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:id="@+id/SignUpActivityTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/signup_title"
        android:textColor="@color/design_default_color_primary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SignUpActivityEmailEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/editText_email"
        android:inputType="text|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpActivityTitleTextView"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/SignUpActivityPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="56dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/signup_password"
        android:inputType="textPassword"
        android:textColorHint="#8D6E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpActivityEmailEditText"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/SignUpActivitySubmitButton"
        android:layout_width="100dp"
        android:layout_height="56dp"
        android:layout_marginTop="80dp"
        android:text="@string/signupsubmit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpActivityPasswordEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>